# clock-webapp

./: Cargo.toml  README.md  Trunk.toml  clock-159dcf21aeed9ebb.js  clock-159dcf21aeed9ebb_bg.wasm  clock-4816ccedef0b4972.js  clock-4816ccedef0b4972_bg.wasm  clock-510100a6d52722d9.js  clock-510100a6d52722d9_bg.wasm  clock-66093f9880a934cc.js  clock-66093f9880a934cc_bg.wasm  clock-6eba6dc52f0050b0.js  clock-6eba6dc52f0050b0_bg.wasm  clock-7fa1d63c7f890d53.js  clock-7fa1d63c7f890d53_bg.wasm  clock-dd3e795614980b7.js  clock-dd3e795614980b7_bg.wasm  clock-e181fd499c4ac7b.js  clock-e181fd499c4ac7b_bg.wasm  index.html  main-345d2847befe94d5.css  main-6e6a0a7d3d129fab.css  main-9bc5f79499986fd5.css  main-aed05e9935a65f0e.css  main-d3a6f519875af9f0.css  main-f9acb063aaefc286.css
src/: main.rs
style/: main.scss
