[package]
name = "clock"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2" }
leptos_router = { version = "0.5.2" }
leptos_meta = { version = "0.5.2", features = ["csr"] }
serde = { version = "1.0.189", features = ["derive"] }
futures = "0.3.28"
console_log = "1.0.0"
log = "0.4.20"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
chrono = "0.4.31"


[dependencies.web-sys]
version = "0.3.64"
features = ["CssStyleDeclaration", "Document", "Element", "HtmlElement"]
